Add link to portfolio.

--- a/index.html
+++ b/index.html
@@ -15,4 +15,7 @@ layout: default
     <a href="https://www.linkedin.com/in/jpace121"> LinkedIn </a>, and can be
     emailed at jpace121@gmail.com.
   </p>
+  <p>
+    Portfolio can be found <a href="http://jpace121.github.io/portfolio"> here.</a>
+  </p>
 </div>
